# study-django

./: LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
core/: admin.py  forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_email_label.py  0002_recommendation.py  0003_alter_recommendation_resource_type.py  0003_profile_brand_profile_linkedin_profile_message_and_more.py  0004_profile_welcome_message.py  0005_skills.py  0006_posts.py  0007_alter_posts_image.py  0008_posts_slug.py  0009_rename_posts_post_rename_services_service_and_more.py  0010_alter_email_options_alter_phone_options_and_more.py  0011_alter_profile_bio_alter_profile_message.py  0012_alter_skill_image.py  0013_alter_post_image.py  0014_post_category_alter_post_image.py  0015_service_icon_alter_post_category.py  0016_alter_post_image.py  0017_newsletter.py
core/static/css/: main.css  style.css
core/templates/: 404.html  500.html  about.html  action.html  base.html  contact.html  footer.html  index.html  newsletter.html  post.html  profile.html  progress.html  recommendation.html  services.html  skills.html  work-process.html  work.html
core/templates/emails/: contact.html
core/tests/: conftest.py  test_forms.py  test_models.py  test_views.py
locale/en/LC_MESSAGES/: django.po
locale/es/LC_MESSAGES/: django.po
manage/: settings.py  urls.py
