[tool.poetry]
name = "study-django"
version = "0.1.0"
description = ""
authors = ["Júlio Paiva <juliopaiva.ti@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.3"


[tool.poetry.group.dev.dependencies]
black = "^26.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-lenght = 88
