[tool.poetry]
name = "study-django"
version = "0.1.0"
description = ""
authors = ["Júlio Paiva <juliopaiva.ti@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.3"


[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
ruff = "^0.15.6"
pytest = "^9.0.2"
pytest-django = "^4.12.0"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "manage.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]